<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_a_message">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/message" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write" />

    </LinearLayout>
    <TextView
        android:id="@+id/nfc_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="360dp"
        android:layout_height="76dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="50sp"
        android:background="@drawable/input"
        android:hint="@string/username"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/scanstore"
        android:layout_width="193dp"
        android:layout_height="59dp"
        android:layout_marginHorizontal="100sp"
        android:layout_marginBottom="580sp"
        android:layout_weight="0"
        android:text="@string/scan_and_store" />
</LinearLayout>